# cograsterbench

./: .gitignore  EXPERIMENTS.md  PROJECT_MAP.md  README.md  pyproject.toml
benchmark/: README.md
benchmark/answer_keys/flood/: flood_001_key.json  flood_002_key.json  flood_003_key.json  flood_004_key.json
benchmark/answer_keys/solar/: solar_001_key.json  solar_002_key.json  solar_003_key.json  solar_004_key.json
benchmark/answer_keys/spectral/: ndvi_001_key.json  ndvi_002_key.json  ndwi_001_key.json  ndwi_002_key.json
benchmark/public_tasks/flood/: flood_001.json  flood_002.json  flood_003.json  flood_004.json
benchmark/public_tasks/solar/: solar_001.json  solar_002.json  solar_003.json  solar_004.json
benchmark/public_tasks/spectral/: ndvi_001.json  ndvi_002.json  ndwi_001.json  ndwi_002.json
benchmark/tasks/flood/: flood_001.json  flood_002.json  flood_003.json  flood_004.json
benchmark/tasks/solar/: solar_001.json  solar_002.json  solar_003.json  solar_004.json
benchmark/tasks/spectral/: ndvi_001.json  ndvi_002.json  ndwi_001.json  ndwi_002.json
benchmark/workflows/bad/: flood_001_bad.json  (+5 more)
cograster/: __init__.py  cli.py  io.py  llm.py  llm_benchmark.py  llm_cli.py  metrics.py  run_benchmark.py  schemas.py  verifier.py
examples/: README.md  guided_flood_001_report.json  guided_flood_001_workflow.json  guided_ndvi_001_report.json  guided_ndvi_001_workflow.json  naive_flood_001_report.json  naive_flood_001_workflow.json  naive_ndvi_001_report.json  naive_ndvi_001_workflow.json
scripts/: split_tasks.py
tests/: test_verifier.py
(+6 files in other folders)
