[project]
name = "cograsteragent-mvp"
version = "0.1.0"
description = "Research prototype for semantic verification of raster-algebra agent workflows"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
